--- a/TPIN2.html
+++ b/TPIN2.html
@@ -9,13 +9,24 @@
 <body>
     <header>
         <h1>Titulo</h1>
+        <ul>
+            <li>
+                <a href="#">Inicio</a>
+            </li>
+            <li>
+                <a href="#">Sobre nosotros</a>
+            </li>
+            <li>
+                <a href="#">Contacto</a>
+            </li>
+        </ul>
     </header>
     <main>
 
     </main>
     <footer>
         <ul>
-            
+
         </ul>
     </footer>
 </body>
