--- a/TPIN2.html
+++ b/TPIN2.html
@@ -14,7 +14,10 @@
                 <a href="#">Inicio</a>
             </li>
             <li>
-                <a href="#">Sobre nosotros</a>
+                <a href="#">Servicios</a>
+            </li>
+            <li>
+                <a href="#">Clientes</a>
             </li>
             <li>
                 <a href="#">Contacto</a>
