--- a/TPIN2.html
+++ b/TPIN2.html
@@ -19,14 +19,10 @@
             <li>
                 <a href="#">Clientes</a>
             </li>
-            <li>
-                <a href="#">Contacto</a>
-            </li>
+
         </ul>
     </header>
-    <main>
-
-    </main>
+    <main></main>
     <footer>
         <ul>
 
