--- a/TPIN2.html
+++ b/TPIN2.html
@@ -19,13 +19,13 @@
             <li>
                 <a href="#">Clientes</a>
             </li>
-
         </ul>
     </header>
     <main></main>
     <footer>
         <ul>
-
+            <li>Clientes</li>
+            <li>Contactenos</li>
         </ul>
     </footer>
 </body>
